syntax = "proto3";

package proto;

service Helloo {

	rpc SayHello (HelloRequest) returns (HelloResponse) {}

}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  int64 timestamp = 5;
}
